K8S/FE.yaml
apiVersion: v1
kind: Pod
metadata:
  name: FE
  labels:
    component: fe
spec:
  containers:
    - name: FE
      image: ahmedelgerby/inventory-frontend:latest
      ports:
        - containerPort: 80
