K8S/alert-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alert-service
  name: alert-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-service
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: alert-service
    spec:
      containers:
      - image: ahmedilgerby/inventory_alert_service:latest
        name: inventory-alert-service
        ports:
        - containerPort: 5001
