K8S/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: ahmedilgerby/inventory_be:latest
        name: inventory-backend
        ports:
        - containerPort: 5000
