K8S/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
      - image: ahmedilgerby/inventory_db:latest
        name: inventory-db
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres
