K8S/reporting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reporting-service
  name: reporting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting-service
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: reporting-service
    spec:
      containers:
      - image: ahmedilgerby/inventory_reporting_service:latest
        name: inventory-reporting-service
        ports:
        - containerPort: 5002
