K8S/FE-net.yaml
apiVersion: v1
kind: Service
metadata:
  name: FE-Network
spec:
  selector:
    component: fe
  ports:
  - port: <Port>
    targetPort: <Target Port>
    nodePort: <Node Port>
  type: ClusterIP
