K8S/alert_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-service
spec:
  selector:
    app: alert-service
  ports:
  - port: 5001
    targetPort: 5001
  type: ClusterIP
