K8S/reporting_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
spec:
  selector:
    app: reporting-service
  ports:
  - port: 5002
    targetPort: 5002
  type: ClusterIP
